# android-ktx-cpp-pizza-shop-native-app

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/pizzackt/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Car.cpp  CppUser.cpp  CppUser.h  native-lib.cpp
app/src/main/cpp/includes/rapidjson/: document.h
app/src/main/java/com/example/pizzackt/: MainActivity.kt  PizzaEditFragment.kt  PizzaListFragment.kt  PizzaRecyclerViewAdapter.kt  TempUser.kt
app/src/main/java/com/example/pizzackt/data/: ApiInterface.kt  DataPizza.kt  NewRequestDataPizza.kt  ResponseListPizza.kt  ResponsePizza.kt  RetrofitClient.kt
app/src/main/java/com/example/pizzackt/placeholder/: PlaceholderContent.kt
app/src/main/res/layout/: activity_main.xml  fragment_pizza_edit.xml  fragment_pizza_list.xml  pizza_list_item.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/pizzackt/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
